cleanup kubernetes installation and fix iptables bug temporarily

--- a/roles/kubernetes/templates/apiserver.j2
+++ b/roles/kubernetes/templates/apiserver.j2
@@ -1,8 +1,5 @@
-###
-# kubernetes system config
-#
-# The following values are used to configure the kube-apiserver
-#
+# {{ ansible_managed }}
+# kube-apiserver config
 
 # The address on the local server to listen to.
 KUBE_API_ADDRESS="--bind-address=0.0.0.0"
