--- a/roles/kubernetes/templates/config.j2
+++ b/roles/kubernetes/templates/config.j2
@@ -1,13 +1,5 @@
-# kubernetes system config
-#
-# The following values are used to configure various aspects of all
-# kubernetes services, including
-#
-#   kube-apiserver.service
-#   kube-controller-manager.service
-#   kube-scheduler.service
-#   kubelet.service
-#   kube-proxy.service
+# {{ ansible_managed }}
+# kubernetes main config
 
 # journal message level, 0 is debug
 # KUBE_LOG_LEVEL="--v=0"
