--- a/roles/kubernetes/templates/kubelet.j2
+++ b/roles/kubernetes/templates/kubelet.j2
@@ -1,4 +1,5 @@
-# kubernetes kubelet (minion) config
+# {{ ansible_managed }}
+# kubelet config
 
 # The address for the info server to serve on (set to 0.0.0.0 or "" for all interfaces)
 KUBELET_ADDRESS="--address=0.0.0.0"
