add master taint and little fixes

--- a/roles/kubernetes/templates/config.j2
+++ b/roles/kubernetes/templates/config.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
-# kubernetes main config
+# kube main config
 
 # journal message level, 0 is debug
 # KUBE_LOG_LEVEL="--v=0"
