add daemonset and deployments for heketi and glusterfs and create volumes

--- a/roles/virt/templates/k8s-vm.xml.j2
+++ b/roles/virt/templates/k8s-vm.xml.j2
@@ -41,6 +41,12 @@
       <target dev='vdb' bus='virtio'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x07' function='0x0'/>
     </disk>
+    <disk type='block' device='disk'>
+      <driver name='qemu' type='raw' cache='none' io='native'/>
+      <source dev='{{virt_lvm_vg}}/{{hostvars[item].vm_name}}-glusterfs'/>
+      <target dev='vdc' bus='virtio'/>
+      <address type='pci' domain='0x0000' bus='0x00' slot='0x10' function='0x0'/>
+    </disk>
     <disk type='file' device='cdrom'>
       <driver name='qemu' type='raw'/>
       <source file='{{virt_images_dir}}/{{hostvars[item].vm_name}}-cloud-config.iso'/>
