--- a/roles/kubernetes/templates/kubeconfig.j2
+++ b/roles/kubernetes/templates/kubeconfig.j2
@@ -1,19 +1,19 @@
 # {{ ansible_managed }}
-current-context: {{kube_context}}
+current-context: {{kube_cluster_name}}
 apiVersion: v1
 clusters:
 - cluster:
-    certificate-authority: {{kube_cert_folder}}/ca.crt
-    server: https://master.{{kube_tld}}:{{kube_apiserver_port}}
-  name: {{kube_context}}-cluster
+    certificate-authority: {{kube_pki_dir}}/certs/ca.crt
+    server: https://master.{{kube_domain}}:{{kube_apiserver_port}}
+  name: {{kube_cluster_name}}-cluster
 contexts:
 - context:
-    cluster: {{kube_context}}-cluster
+    cluster: {{kube_cluster_name}}-cluster
     namespace: default
     user: default-user
-  name: {{kube_context}}
+  name: {{kube_cluster_name}}
 users:
 - name: default-user
   user:
-    client-certificate: {{kube_cert_folder}}/node.crt
-    client-key: {{kube_cert_folder}}/node.key
+    client-certificate: {{kube_pki_dir}}/certs/{{inventory_hostname}}.crt
+    client-key: {{kube_pki_dir}}/keys/{{inventory_hostname}}.key
