--- a/roles/kubernetes/templates/apiserver.j2
+++ b/roles/kubernetes/templates/apiserver.j2
@@ -14,4 +14,4 @@ KUBE_SERVICE_ADDRESSES="--service-cluster-ip-range={{kube_service_network}}"
 KUBE_ADMISSION_CONTROL="--admission-control=NamespaceLifecycle,NamespaceExists,LimitRanger,SecurityContextDeny,ServiceAccount,ResourceQuota"
 
 # Add your own!
-KUBE_API_ARGS="--client-ca-file={{kube_cert_folder}}/ca.crt --tls-cert-file={{kube_cert_folder}}/node.crt --tls-private-key-file={{kube_cert_folder}}/node.key --service-account-key-file={{kube_cert_folder}}/node.key"
+KUBE_API_ARGS="--client-ca-file={{kube_pki_dir}}/certs/ca.crt --tls-cert-file={{kube_pki_dir}}/certs/{{inventory_hostname}}.crt --tls-private-key-file={{kube_pki_dir}}/keys/{{inventory_hostname}}.key --service-account-key-file={{kube_pki_dir}}/keys/{{inventory_hostname}}.key"
