fixes and new external kubelet config

--- a/roles/kubernetes/templates/config.j2
+++ b/roles/kubernetes/templates/config.j2
@@ -4,7 +4,7 @@
 # journal message level, 0 is debug
 # KUBE_LOG_LEVEL="--v=0"
 
-# Should this cluster be allowed to run privileged docker containers
+# DEPRECATED - Should this cluster be allowed to run privileged docker containers
 KUBE_ALLOW_PRIV="--allow-privileged={{kube_allow_privileged_containers}}"
 
 # How the controller-manager, scheduler, and proxy find the apiserver
