--- a/roles/basic/templates/hosts.j2
+++ b/roles/basic/templates/hosts.j2
@@ -1,5 +1,5 @@
-127.0.0.1 {{ansible_hostname}}
-::1       {{ansible_hostname}}
+127.0.0.1 localhost {{ansible_hostname}}
+::1       localhost {{ansible_hostname}}
 
 {{internal_ip}} {{inventory_hostname}}.{{kube_domain}}
 
@@ -9,4 +9,9 @@
 {% endfor %}
 {% for master in groups.kube_masters %}{% if hostvars[master].inventory_hostname != inventory_hostname %}
 {{hostvars[master].internal_ip | default(hostvars[master].ansible_default_ipv4.address)}} {{hostvars[master].inventory_hostname}}.{{kube_domain}}
+{% endif %}{% endfor %}
+
+# kubernetes minions
+{% for minion in groups.kube_minions %}{% if hostvars[minion].inventory_hostname != inventory_hostname %}
+{{hostvars[minion].internal_ip | default(hostvars[minion].ansible_default_ipv4.address)}} {{hostvars[minion].inventory_hostname}}.{{kube_domain}}
 {% endif %}{% endfor %}
