--- a/roles/pki/templates/openssl.config.j2
+++ b/roles/pki/templates/openssl.config.j2
@@ -18,10 +18,16 @@ subjectAltName = @alt_names
 
 [alt_names]
 DNS.1 = {{hostvars[item].inventory_hostname}}.{{kube_domain}}
+{% if hostvars[item].internal_ip is defined %}
+IP.1 = {{hostvars[item].internal_ip}}
+{% elif hostvars[item].ansible_default_ipv4 is defined %}
+IP.1 = {{hostvars[item].ansible_default_ipv4.address}}
+{% endif %}
 {% if item in groups['kube_masters'] %}
 DNS.2 = master.{{kube_domain}}
 DNS.3 = kubernetes.default.srv.{{kube_internal_domain}}
 DNS.4 = kubernetes.default.srv
 DNS.5 = kubernetes.default
 DNS.6 = kubernetes
+IP.2 = {{kube_internal_kubernetes_ip}}
 {% endif %}
