--- a/roles/flanneld/templates/flanneld.j2
+++ b/roles/flanneld/templates/flanneld.j2
@@ -4,6 +4,9 @@ FLANNEL_OPTIONS="--etcd-cafile={{flanneld_pki_dir}}/certs/ca.crt --etcd-certfile
 
 # new naming conventions
 FLANNELD_PUBLIC_IP="{{internal_ip}}"
+{% if flanneld_interface is not none %}
+FLANNELD_IFACE="{{flanneld_interface}}"
+{% endif %}
 FLANNELD_ETCD_ENDPOINTS="{% for host in groups['etcd_servers'] %}https://{{hostvars[host].inventory_hostname}}.{{kube_domain}}:{{ etcd_port }}{% if not loop.last %},{% endif %}{% endfor %}"
 FLANNELD_ETCD_PREFIX="/{{flanneld_network_name}}/network"
 FLANNELD_ETCD_CAFILE="{{flanneld_pki_dir}}/certs/ca.crt"
