--- a/roles/flanneld/templates/flanneld.j2
+++ b/roles/flanneld/templates/flanneld.j2
@@ -3,7 +3,7 @@ FLANNEL_ETCD_PREFIX="/{{flanneld_network_name}}/network"
 FLANNEL_OPTIONS="--etcd-cafile={{flanneld_pki_dir}}/certs/ca.crt --etcd-certfile={{flanneld_pki_dir}}/certs/{{inventory_hostname}}.crt --etcd-keyfile={{flanneld_pki_dir}}/keys/{{inventory_hostname}}.key"
 
 # new naming conventions
-{% if flanneld_default_interface is not none and flanneld_default_interface != "" %}
+{% if flanneld_default_interface != '' %}
 FLANNELD_IFACE="{{flanneld_default_interface}}"
 {% endif %}
 FLANNELD_ETCD_ENDPOINTS="{% for host in groups['etcd_servers'] %}https://{{hostvars[host].inventory_hostname}}.{{kube_domain}}:{{ etcd_port }}{% if not loop.last %},{% endif %}{% endfor %}"
