--- a/roles/kubernetes/templates/bootstrap/kube-dns.yml.j2
+++ b/roles/kubernetes/templates/bootstrap/kube-dns.yml.j2
@@ -1,27 +1,11 @@
 apiVersion: v1
-kind: Service
-metadata:
-  name: kube-dns
-  namespace: kube-system
-  labels:
-    k8s-app: kube-dns
-spec:
-  clusterIP: {{kube_internal_dns_servers[0]}}
-  selector:
-    k8s-app: kube-dns
-  ports:
-    - name: dns
-      port: 53
-      protocol: UDP
-    - name: dns-tcp
-      port: 53
-      protocol: TCP
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kube-dns
   namespace: kube-system
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -158,3 +142,25 @@ spec:
           configMap:
             name: kube-dns
             optional: true
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kube-dns
+  namespace: kube-system
+  labels:
+    k8s-app: kube-dns
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+    kubernetes.io/name: "KubeDNS"
+spec:
+  clusterIP: {{kube_internal_dns_servers[0]}}
+  selector:
+    k8s-app: kube-dns
+  ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
