--- a/roles/flanneld/templates/iptables.save.j2
+++ b/roles/flanneld/templates/iptables.save.j2
@@ -9,10 +9,6 @@ COMMIT
 :INPUT ACCEPT
 :FORWARD DROP
 :OUTPUT ACCEPT
--A FORWARD -i {{flanneld_interface_name}} -j ACCEPT
--A FORWARD -o {{flanneld_interface_name}} -j ACCEPT
-{% if flanneld_over_wireguard == true %}
--A FORWARD -i {{flanneld_wireguard_interface}} -j ACCEPT
--A FORWARD -o {{flanneld_wireguard_interface}} -j ACCEPT
-{% endif %}
+-A FORWARD -i {{flanneld_interface}} -j ACCEPT
+-A FORWARD -o {{flanneld_interface}} -j ACCEPT
 COMMIT
